src/objects/BMCServiceDesk__BMC_Patch__c.object
<CustomObject>
    <description>BMC_Patch. CMDB Class that stores information about fixes (service patches) for program defects. For example, IT adminstrators can use the ServicePackInEffect attribute to define a specific service pack that a given patch applies to, to ensure that the patch is not propagated to incorrect service pack versions. This class has no corresponding DMTF CIM class.</description>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Service_Pack_In_Effect__c</fullName>
        <label>Service Pack In Effect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Severity_Rating__c</fullName>
        <label>Severity Rating</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Patch</label>
    <nameField>
        <label>Patch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>